deploy/PRE/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/ipAddresses: "null"
    field.cattle.io/targetDnsRecordIds: "null"
    field.cattle.io/targetWorkloadIds: '["deployment:med-benefits:jobBaseName"]'
  labels:
    cattle.io/creator: norman
  name: jobBaseName
  namespace: med-benefits
  selfLink: /api/v1/namespaces/med-benefits/services/jobBaseName
spec:
  clusterIP: None
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 4449
  selector:
    workloadID_jobBaseName: "true"
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
