deploy/PRE/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/ingressState: '{"dvh7781yS6J5NHVJlwryaXAE2kFTVweOGBG1oOvSFnFHRe5p39N+dbGefAlg7Y9ugU4nW7hUC7T==":""}'
    field.cattle.io/publicEndpoints: '[{"addresses":[""],"port":80,"protocol":"HTTP","serviceName":"med-benefits:jobBaseName","ingressName":"med-benefits:jobBaseName","hostname":"jobBaseName.imedlife.com","allNodes":false}]'
  generation: 1
  labels:
    cattle.io/creator: norman
  name: jobBaseName
  namespace: med-benefits
  selfLink: /apis/extensions/v1beta1/namespaces/med-benefits/ingresses/jobBaseName
spec:
  rules:
    - host: jobBaseName.imedlife.com
      http:
        paths:
          - backend:
              serviceName: jobBaseName
              servicePort: 8080
status:
  loadBalancer:
    ingress:
      - hostname: a079842035fd211eaa7280ebf42bb356-2037709022.us-east-1.elb.amazonaws.com
